2014-11-02  Oliver Kiddle  <opk@zsh.org>

	* 33575: Src/Zle/zle_params.c, Src/Zle/zle_utils.c: reset vi change
	start position if text is inserted before it or on history movement

2014-11-02  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 33591: Src/exec.c, Test/D04parameter.ztst: don't treat an exec
	within an subshell as an exec of the parent shell even if about
	to exit.  Fixes incorrect SHLVL in subshell.

2014-10-31  Oliver Kiddle  <opk@zsh.org>

	* unposted: Src/jobs.c: quash compiler warning

	* unposted: Test/X02zlevi.ztst: correct cursor position in test

2014-10-31  Peter Stephenson  <p.stephenson@samsung.com>

	* unposted: .gitignore: add /.project for GitEye.

	* 33582: Src/Modules/zftp.c: don't include tcp.mdh in zftp.c as
	it only contains private module definitions.

	* via private email: Jérémie Roquet: Src/options.c: more care
	with errors using setuid().

2014-10-30  Oliver Kiddle  <opk@zsh.org>

	* 33570, 33576: Doc/Zsh/zle.yo, Src/Zle/iwidgets.list, Src/Zle/zle.h,
	Src/Zle/zle_misc.c, Src/Zle/zle_vi.c, Test/X02zlevi.ztst: make kill-
	ring/yank-pop work in vi mode after vi-put-before and vi-put-after

2014-10-29  Barton E. Schaefer  <schaefer@zsh.org>

	* 33566: Jun T.: Src/Modules/zselect.c: quash compiler warning

	* 33563: Completion/Base/Core/_main_complete, Src/Zle/complist.c:
	fix thinko in status message for INT/QUIT signals; check errflag
	in output loops so that unexpectedly long completion listings can
	be interrupted

2014-10-29  Oliver Kiddle  <opk@zsh.org>

	* 33528: Src/Zle/iwidgets.list, Src/Zle/zle_vi.c,
	Test/X02zlevi.ztst: take notice of last column position when
	using vi-yank and an upward cursor movement

2014-10-27  Mikael Magnusson  <mikachu@gmail.com>

	* 33561, 33562: Src/jobs.c: The time builtin forgot to unmetafy
	TIMEFMT.

2014-10-26  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 33564: Test/A05execution.ztst: more care with monitor option.

	* 33542: Test/A05execution.ztst: test previous patch.
